Highlight login text

--- a/markup/register-landing-page.html
+++ b/markup/register-landing-page.html
@@ -15,7 +15,7 @@
       <h2 class="marketing-follow">A global luxury e-commerce platform</h2>
       <div class="register-cta">
         <a href="#" class="btn btn-large btn-secondary">Join Now</a>
-        <p class="text-center">Already a member? <a href="#" data-toggle="modal" data-target="#myModal">Login here</a></p>
+        <p class="text-center">Already a member? <a class="text-secondary" href="#" data-toggle="modal" data-target="#myModal">Login here</a></p>
       </div>
     </div>
     <div class="row register-marketing-stubs">
