[wip] Landing page

--- a/markup/register-landing-page.html
+++ b/markup/register-landing-page.html
@@ -42,50 +42,8 @@
     <div class="row register-marketing-stubs">
       <div class="large-12 columns large-centered">
         <div class="large-8 columns">
-          <iframe class="register-marketing-video" src="//www.youtube.com/embed/gFkCLTycmgk" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="large-8 columns end">
-          <h2 class="what">What is runway2street?</h2>
-          <p>We've created a beautiful space to connect women to an unparalleled world of wearable, gorgeous fashion from incredible designers from all corners of the world. Our users linger, discover new brands and fall in love with products that speak to them. </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt enim culpa ab in dolorem praesentium quasi excepturi quo facere tenetur quisquam modi corrupti suscipit, tempora, commodi eaque reiciendis! Numquam, nisi.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="large-12 large-centered columns">
-        <hr>
-      </div>
-    </div>
-    <div class="row register-marketing-stubs">
-      <div class="large-12 columns large-centered">
-        <div class="large-8 columns">
-          <h2 class="what">Why join runway2street?</h2>
-          <p>We've created a beautiful space to connect women to an unparalleled world of wearable, gorgeous fashion from incredible designers from all corners of the world. Our users linger, discover new brands and fall in love with products that speak to them. </p>
-          <div>
-            <h4>
-              <i class="fa fa-paper-plane-o"></i> Get up and running in a matter of minutes
-            </h4>
-            <p>Lorem ipsum dolor sit amet</p>
-          </div>
-          <div>
-            <h4>
-              <i class="fa fa-paper-plane-o"></i> Tap into our targeted audience
-            </h4>
-            <p>Lorem ipsum dolor sit amet</p>
-          </div>
-          <div>
-            <h4>
-              <i class="fa fa-paper-plane-o"></i> Be exclusive
-            </h4>
-            <p>Lorem ipsum dolor sit amet</p>
-          </div>
-          <div>
-            <h4>
-              <i class="fa fa-paper-plane-o"></i> Manage inventory
-            </h4>
-            <p>Lorem ipsum dolor sit amet</p>
-          </div>
-
+          <h2 class="what" style="margin-bottom: 1em">Why join runway2street?</h2>
+            <iframe class="register-marketing-video" src="//www.youtube.com/embed/gFkCLTycmgk" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="large-8 columns">
           <div class="form-group">
@@ -104,7 +62,7 @@
             <p class="help-text">A block of help text that breaks onto a new line and may extend beyond one line. A block of help text that breaks onto a new line and may extend beyond one line. A block of help text that breaks onto a new line and may extend beyond one line.</p>
           </div>
           <div class="form-group">
-            <label for="register-file">Upload lookbook / Product Images</label>
+            <label for="register-file">Upload lookbook</label>
             <input type="file">
           </div>
           <div class="form-group">
@@ -125,9 +83,8 @@
       <ul class="horizontal-list divider-list">
         <li><a href="#">Help</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a href="#">Designer Agreement</a></li>
         <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Privacy Polic</a></li>
+        <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
       <p class="text-center">
