Refine UI for index page

--- a/markup/index.html
+++ b/markup/index.html
@@ -36,14 +36,14 @@
               <h3><i class="fa fa-barcode"></i> Products</h3>
             </div>
             <div class="large-4 columns text-center">
-              <input type="text" placeholder="Search all data" class="search-all">
+              <input type="text" placeholder="Search all data" class="search-all"> <!-- To hook up autocomplete here -->
               <button class="btn btn-primary">
                 <i class="fa fa-search"></i>
               </button>
             </div>
             <div class="large-6 columns text-right end">
               <div class="dropdown top-nav-icons">
-                <a data-toggle="dropdown" href="#"><i class="fa fa-bell-o"></i></a>
+                <a data-toggle="dropdown" href="#" class="top-nav-notification"><i class="fa fa-bell-o"></i></a>
                 <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
                   <div class="notifications">
                     <header>4 Notifications (1 new) </header>
