--- a/markup/in-the-press.html
+++ b/markup/in-the-press.html
@@ -13,17 +13,17 @@
       <div class="sidebar-primary">
         <h1 class="logo">runway2street</h1>
         <ul class="sidenav">
-          <li><i class="fa fa-home"></i> <span>Dashboard</span> </li>
-          <li><i class="fa fa-users"></i> <span>Designers</span> </li>
-          <li class="active"><i class="fa fa-barcode"></i> <span>Products</span> </li>
+          <li><a href="#"><i class="fa fa-home"></i> <span>Dashboard</span> </a></li>
+          <li><a href="#"><i class="fa fa-users"></i> <span>Designers</span> </a></li>
+          <li class="active"><a href="#"><i class="fa fa-barcode"></i> <span>Products</span> </a></li>
           <ul class="sidenav-submenu">
             <li class="active"><a href="#">Products</a></li>
             <li><a href="#">Product Images</a></li>
             <li><a href="#">Inventory</a></li>
           </ul>
-          <li><i class="fa fa-credit-card"></i> <span>Orders</span> </li>
-          <li><i class="fa fa-thumbs-o-up"></i> <span>Marketing</span> </li>
-          <li id="collapse-sidebar"><i class="fa fa-chevron-left button-collapse-sidebar"></i> <span> Collapse</span> </li>
+          <li><a href="#"><i class="fa fa-credit-card"></i> <span>Orders</span> </a></li>
+          <li><a href="#"><i class="fa fa-thumbs-o-up"></i> <span>Marketing</span> </a></li>
+          <li id="collapse-sidebar"><a href="#"><i class="fa fa-chevron-left button-collapse-sidebar"></i> <span> Collapse</span> </a></li>
         </ul>
       </div>
       <section class="content-main">
@@ -271,7 +271,6 @@
           title: "<i class='fa fa-exclamation-circle'></i> Error",
           message: "Please enter a valid URL",
         });
-
       </script>
   </body>
 </html>
