Edit bower json to include velocity and in-the-press CRUD notifications

--- a/markup/in-the-press.html
+++ b/markup/in-the-press.html
@@ -266,11 +266,11 @@
         $.growl.notice({
           title: "<i class='fa fa-check-circle-o'></i> Success",
           message: "Press link added",
-        });
+        }); // Success
         $.growl.error({
           title: "<i class='fa fa-exclamation-circle'></i> Error",
           message: "Please enter a valid URL",
-        });
+        }); // Error
       </script>
   </body>
 </html>
