--- a/markup/product-detail.html
+++ b/markup/product-detail.html
@@ -560,7 +560,9 @@
       <script type="text/javascript" src="../vendors/tooltipster/js/jquery.tooltipster.min.js"></script>
       <script>
         $(document).ready(function() {
-            $('.tooltip').tooltipster();
+            $('.tooltip').tooltipster({
+              theme: 'black-tips'
+            });
         });
       </script>
   </body>
